# coordinator

./: .bzrignore  .gitignore  Makefile.am  README  api.vala  base_fake_address_manager.vala  configure.ac  coord.vala  fk_database.vala  main.vala  peer_service.vala  rngen.vala  serializables.vala  serialize_helpers.vala  test_1.script.in  test_2.script.in  test_3.script.in
docs/: README
testsuites/scripts/: first  get_n_nodes  graph  routing_and_propagation
testsuites/serialization/: coord.vala  serialization.vala  test_serialization.vala
testsuites/simulator/: simulator.vala
testsuites/system_peer/: address_inside_gnode.vala  coord_helpers.vala  coord_signals.vala  fake_hooking.vala  peers_helpers.vala  peers_signals.vala  serializables.vala  system_peer.vala  task_check_get_n_nodes.vala  task_check_routing_and_propagation.vala  task_gateways.vala  task_identities.vala  task_modules.vala
testsuites/system_peer/rpc/: module_stubs.vala  skeleton_factory.vala  stub_factory.vala
testsuites/test_serialization/: test_serialization.vala
